{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 26,
  "lineage": "f45d492b-139c-505c-fb16-9386bfe36c84",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631041859479:network-acl/acl-0ee8bf63580ca4475",
            "default_network_acl_id": "acl-0ee8bf63580ca4475",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ee8bf63580ca4475",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "631041859479",
            "subnet_ids": [
              "subnet-00361d88b13a1360d",
              "subnet-005e8adf9828cab20",
              "subnet-00dbb48e2c74971f4",
              "subnet-01a2aa408a56c6a92",
              "subnet-09c681f2414e90ff7",
              "subnet-0ec98a102caa3b75a"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-default",
              "Owner": "Arvin"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-default",
              "Owner": "Arvin"
            },
            "vpc_id": "vpc-0803b5faf87a93492"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631041859479:route-table/rtb-0cdc05476b9ba9ac9",
            "default_route_table_id": "rtb-0cdc05476b9ba9ac9",
            "id": "rtb-0cdc05476b9ba9ac9",
            "owner_id": "631041859479",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-default",
              "Owner": "Arvin"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-default",
              "Owner": "Arvin"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0803b5faf87a93492"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631041859479:security-group/sg-08b97173b2d9e2ed3",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-08b97173b2d9e2ed3",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "631041859479",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-default",
              "Owner": "Arvin"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-default",
              "Owner": "Arvin"
            },
            "vpc_id": "vpc-0803b5faf87a93492"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01d3e3dfcac4db185",
            "arn": "arn:aws:ec2:us-east-1:631041859479:elastic-ip/eipalloc-01d3e3dfcac4db185",
            "domain": "vpc",
            "id": "eipalloc-01d3e3dfcac4db185",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-172-112-151.compute-1.amazonaws.com",
            "public_ip": "54.172.112.151",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-us-east-1a",
              "Owner": "Arvin"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-us-east-1a",
              "Owner": "Arvin"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631041859479:internet-gateway/igw-0067e40c7fe6347d0",
            "id": "igw-0067e40c7fe6347d0",
            "owner_id": "631041859479",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev",
              "Owner": "Arvin"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev",
              "Owner": "Arvin"
            },
            "vpc_id": "vpc-0803b5faf87a93492"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01d3e3dfcac4db185",
            "association_id": "eipassoc-011f23f78509bdfbb",
            "connectivity_type": "public",
            "id": "nat-0abd80c59a9ac759d",
            "network_interface_id": "eni-097ddd029e94707d2",
            "private_ip": "10.0.101.33",
            "public_ip": "54.172.112.151",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-005e8adf9828cab20",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-us-east-1a",
              "Owner": "Arvin"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-us-east-1a",
              "Owner": "Arvin"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02387a22e2b160ab71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0abd80c59a9ac759d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02387a22e2b160ab7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0067e40c7fe6347d0",
            "id": "r-rtb-050db86abfc50d60d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-050db86abfc50d60d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631041859479:route-table/rtb-0f878be7dad406c7c",
            "id": "rtb-0f878be7dad406c7c",
            "owner_id": "631041859479",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-db",
              "Owner": "Arvin"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-db",
              "Owner": "Arvin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0803b5faf87a93492"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631041859479:route-table/rtb-02387a22e2b160ab7",
            "id": "rtb-02387a22e2b160ab7",
            "owner_id": "631041859479",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-private",
              "Owner": "Arvin"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-private",
              "Owner": "Arvin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0803b5faf87a93492"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631041859479:route-table/rtb-050db86abfc50d60d",
            "id": "rtb-050db86abfc50d60d",
            "owner_id": "631041859479",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-public",
              "Owner": "Arvin"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-public",
              "Owner": "Arvin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0803b5faf87a93492"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7319731f8678f76",
            "route_table_id": "rtb-0f878be7dad406c7c",
            "subnet_id": "subnet-00dbb48e2c74971f4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2fa0bac94ba81b9",
            "route_table_id": "rtb-0f878be7dad406c7c",
            "subnet_id": "subnet-00361d88b13a1360d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ff1118c776772be",
            "route_table_id": "rtb-02387a22e2b160ab7",
            "subnet_id": "subnet-01a2aa408a56c6a92"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e1840e801a17ac4",
            "route_table_id": "rtb-02387a22e2b160ab7",
            "subnet_id": "subnet-09c681f2414e90ff7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0920c08b564cadea0",
            "route_table_id": "rtb-050db86abfc50d60d",
            "subnet_id": "subnet-005e8adf9828cab20"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0423f67c0c5307210",
            "route_table_id": "rtb-050db86abfc50d60d",
            "subnet_id": "subnet-0ec98a102caa3b75a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631041859479:subnet/subnet-00dbb48e2c74971f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.151.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00dbb48e2c74971f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "631041859479",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "NaTypeme": "database-subnets",
              "Name": "vpc-dev-db-us-east-1a",
              "Owner": "Arvin"
            },
            "tags_all": {
              "Environment": "dev",
              "NaTypeme": "database-subnets",
              "Name": "vpc-dev-db-us-east-1a",
              "Owner": "Arvin"
            },
            "vpc_id": "vpc-0803b5faf87a93492"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631041859479:subnet/subnet-00361d88b13a1360d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.152.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00361d88b13a1360d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "631041859479",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "NaTypeme": "database-subnets",
              "Name": "vpc-dev-db-us-east-1b",
              "Owner": "Arvin"
            },
            "tags_all": {
              "Environment": "dev",
              "NaTypeme": "database-subnets",
              "Name": "vpc-dev-db-us-east-1b",
              "Owner": "Arvin"
            },
            "vpc_id": "vpc-0803b5faf87a93492"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631041859479:subnet/subnet-01a2aa408a56c6a92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a2aa408a56c6a92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "631041859479",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-private-us-east-1a",
              "Owner": "Arvin",
              "Type": "private-subnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-private-us-east-1a",
              "Owner": "Arvin",
              "Type": "private-subnets"
            },
            "vpc_id": "vpc-0803b5faf87a93492"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631041859479:subnet/subnet-09c681f2414e90ff7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c681f2414e90ff7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "631041859479",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-private-us-east-1b",
              "Owner": "Arvin",
              "Type": "private-subnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-private-us-east-1b",
              "Owner": "Arvin",
              "Type": "private-subnets"
            },
            "vpc_id": "vpc-0803b5faf87a93492"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631041859479:subnet/subnet-005e8adf9828cab20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005e8adf9828cab20",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "631041859479",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-public-us-east-1a",
              "Owner": "Arvin",
              "Type": "public-subnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-public-us-east-1a",
              "Owner": "Arvin",
              "Type": "public-subnets"
            },
            "vpc_id": "vpc-0803b5faf87a93492"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631041859479:subnet/subnet-0ec98a102caa3b75a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec98a102caa3b75a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "631041859479",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-public-us-east-1b",
              "Owner": "Arvin",
              "Type": "public-subnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-public-us-east-1b",
              "Owner": "Arvin",
              "Type": "public-subnets"
            },
            "vpc_id": "vpc-0803b5faf87a93492"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631041859479:vpc/vpc-0803b5faf87a93492",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ee8bf63580ca4475",
            "default_route_table_id": "rtb-0cdc05476b9ba9ac9",
            "default_security_group_id": "sg-08b97173b2d9e2ed3",
            "dhcp_options_id": "dopt-0f0a5774",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0803b5faf87a93492",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cdc05476b9ba9ac9",
            "owner_id": "631041859479",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev",
              "Owner": "Arvin"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev",
              "Owner": "Arvin"
            }
          }
        }
      ]
    }
  ]
}